After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729373 - rhythmbox crashes upon "Jump to Playing Song"
rhythmbox crashes upon "Jump to Playing Song"
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: User Interface
3.0.x
Other Linux
: Normal major
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
: 732860 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-05-02 10:27 UTC by wiegner
Modified: 2014-08-17 23:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch which restores RB < 3.0 behavior (1.20 KB, patch)
2014-05-05 18:23 UTC, wiegner
committed Details | Review

Description wiegner 2014-05-02 10:27:05 UTC
rhythmbox crashes when selecting "Jump to Playing Song" or pressing <ctrl>+j

Steps to reproduce:

- "Side pane" has to be enabled
- "View queue as side pane" has to be enabled
- Add some songs to the play queue

When rhythmbox plays songs from the queue press <ctrl>+j

=> crash

**
Rhythmbox:ERROR:rb-display-page-tree.c:497:rb_display_page_tree_select: assertion failed: (rb_display_page_model_find_page (display_page_tree->priv->page_model, page, &iter))
Aborted (core dumped)


System is Ubuntu 14.04 32 bit

rhythmbox 3.0.2 

Happens with ubuntus shipped version and also with a compiled
version from the gnome homepage
Comment 1 Jonathan Matthew 2014-05-04 03:44:56 UTC
fixed in commit a1246eb
Comment 2 wiegner 2014-05-05 18:22:29 UTC
Thanks for the quick fix.

But I preferred the behavior of rhythmbox < 3.0, where in 
case of the "jump to playing song" with "play queue in side pane"
enabled it would jump to the playing song in the main window 
and not to the playing song in the side pane.

Was this intentionally changed? I think the previous behavior 
was more intuitive.

Would you consider applying the attached patch, which restores
this?
Comment 3 wiegner 2014-05-05 18:23:37 UTC
Created attachment 275909 [details] [review]
patch which restores RB < 3.0 behavior
Comment 4 Jonathan Matthew 2014-05-05 22:15:52 UTC
maybe.  INCOMPLETE is definitely not the bug status you wanted, though.
Comment 5 wiegner 2014-05-07 20:31:44 UTC
Sorry for setting the status wrong, but I think you got, what I tried to express.

I would really be happy, if RB behavior could be changed according to my patch.
But if not, then close the bug report. In that case I'll just patch RB
for myself.
Comment 6 Jonathan Matthew 2014-07-07 22:08:21 UTC
*** Bug 732860 has been marked as a duplicate of this bug. ***
Comment 7 Jonathan Matthew 2014-08-17 23:10:46 UTC
pushed as commit 71ea44b; thanks for the patch.