shell: implement 'jump to playing' for queue as side pane

Focus the side pane and scroll to the playing entry rather than trying the
normal code path, which leads to an assertion failure.

https://bugzilla.gnome.org/show_bug.cgi?id=729373